<resources>
    <string name="app_name">Weather Forever</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="weather_today">Погода на сегодня</string>
    <string name="weather_week">Погода на неделю</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>

    <string name="update_only_wifi">Обновлять только по Wi-Fi</string>
    <string name="update_at_startup">Обновлять при старте</string>
    <string name="ask_when_leaving">Спрашивать при входе</string>
    <string name="location_selection">Выбрать местоположение</string>
    <string name="manual_location">Вручную</string>
    <string name="auto_location">По моим координатам</string>
    <string name="set_city">Выберите город</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="reload">Обновить</string>
    <string name="enter_city_name_en">Название города на Английском</string>
    <string name="enter_city_name">Введите название города</string>

    <string name="pressure">Давление:</string>
    <string name="humidity">Влажность:</string>
    <string name="wind">Ветер:</string>
    <string name="minTemperature">Температура:</string>
    <string name="mm">мм</string>
    <string name="percent">%</string>
    <string name="wind_speed">" м/сек"</string>

    <string name="ask_exit">Выход</string>
    <string name="ask_exit_text">Вы уверены что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string-array name="countries">
        <item name="ua">Украина</item>
        <item name="eg">Египет</item>
        <item name="pl">Польша</item>
        <item name="ru">Россия</item>
        <item name="tr">Турция</item>
    </string-array>
</resources>
