<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/weather_today" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_menu_week"
            android:title="@string/weather_week" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_menu_exit"/>
    </group>

</menu>
